--- a/app/styles/app/_fontrun.scss
+++ b/app/styles/app/_fontrun.scss
@@ -1,31 +1,14 @@
-$fr-main: #db43bd;
-$fr-secondary: #332532;
+// Colors
 
-// ### Fonts ###
+$fr-color-main: #db43bd;
+$fr-color-secondary: #332532;
 
-@font-face {
-  font-family: 'aileron';
-  src: url(../fonts/Aileron-Regular.otf);
-  font-weight: 400;
-  font-style: normal;
-}
+// Fonts
 
-@font-face {
-  font-family: 'aileron';
-  src: url(../fonts/Aileron-Light.otf);
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'aileron';
-  src: url(../fonts/Aileron-Bold.otf);
-  font-weight: 700;
-  font-style: normal;
-}
+$fr-font-primary: 'Work Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 h1, h2, h3, h4, h5 {
 	margin-top: 0;
-	font-family: 'aileron', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: $fr-font-primary;
 	color: inherit;
 }
