--- a/app/styles/app/_fontrun.scss
+++ b/app/styles/app/_fontrun.scss
@@ -2,6 +2,8 @@
 
 $fr-color-main: #db43bd;
 $fr-color-secondary: #332532;
+$fr-color-secondary-darker: darken(#332532, 5%);
+$fr-color-secondary-lighter: lighten(#332532, 5%);
 
 // Fonts
 
