--- a/app/styles/app/_side-menu.scss
+++ b/app/styles/app/_side-menu.scss
@@ -14,7 +14,7 @@
 	z-index: 10;
 
 	&:hover {
-		background-color: darken($fr-color-secondary, 5%);
+		background-color: $fr-color-secondary-darker;
 	}
 }
 
@@ -25,15 +25,40 @@
 	top: 0;
 	left: -360px;
 	width: 360px;
-	min-height: 100vh;
+	height: 100vh;
 	background-color: $fr-color-secondary;
 	z-index: 100;
 	transition: left 0.5s ease, box-shadow 0.5s ease;
 	box-shadow: 0 0 rgba(#000, 0.4);
 
-	.-h1 {
+	.side-menu__title {
+		position: relative;
 		font-weight: 300;
 		font-size: 2.2em;
+
+		&.side-menu__title--collapsable {
+			cursor: pointer;
+		}
+
+		span {
+			position: absolute;
+			top: 50%;
+			right: 0;
+			margin-top: -12px;
+			height: 24px;
+			width: 24px;
+			line-height: 24px;
+			text-align: center;
+			font-size: 18px;
+			opacity: 0;
+			transition: opacity 0.5s ease;
+		}
+
+		&:hover {
+			span {
+				opacity: 1;
+			}
+		}
 	}
 
 	.-h2 {
@@ -73,27 +98,47 @@
 		cursor: pointer;
 
 		&:hover {
-			background-color: darken($fr-color-secondary, 5%);
+			background-color: $fr-color-secondary-darker;
 		}
 	}
 
 	header {
+		display: -webkit-flex;
 		display: flex;
+		-webkit-align-items: center;
+		align-items: center;
 		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
 		height: 100px;
 		padding: 0 20px;
+		background-color: $fr-color-secondary;
+		box-shadow: 0 4px 4px rgba(0,0,0, 0.2);
+		z-index: 1;
 
 		.side-menu__logo {
 			width: 50px;
 		}
+
+		.side-menu__view {
+			margin-left: 20px;
+		}
 	}
 
 	.side-menu__content {
-		padding: 120px 20px 70px 20px;
 		overflow-y: auto;
+		padding: 120px 20px 70px 20px;
+		height: 100vh;
+
+		&::-webkit-scrollbar {
+			width: 6px;
+			background-color: $fr-color-secondary-darker;
+		}
+
+		&::-webkit-scrollbar-thumb {
+			background-color: #FFF;
+		}
 	}
 
 	.side-menu__input {
@@ -113,16 +158,18 @@
 	.side-menu__font-select {
 
 		ul {
+			position: relative;
+
 			&:hover {
 				.side-menu__font-switch {
-					display: block;
+					opacity: 1;
 				}
 			}
 		}
 
 		li {
 			padding: 15px;
-			background-color: darken($fr-color-secondary, 5%);
+			background-color: $fr-color-secondary-darker;
 			cursor: pointer;
 			transition: all 0.3s ease;
 
@@ -165,7 +212,7 @@
 			flex-direction: row;
 			align-items: center;
 			height: 35px;
-			background-color: darken($fr-color-secondary, 5%);
+			background-color: $fr-color-secondary-darker;
 
 			&:not(:first-child) {
 				margin-top: 10px;
@@ -177,12 +224,13 @@
 			}
 
 			span {
+				-webkit-flex-basis: 35px;
 				flex-basis: 35px;
+				min-width: 35px;
 				height: 100%;
 			}
 
 			.side-menu__input {
-				flex-grow: 10;
 				font-size: 18px;
 				background-color: transparent;
 			}
@@ -200,7 +248,7 @@
 		position: relative;
     padding: 0 115px 0 15px;
 		min-height: 50px;
-		background-color: darken($fr-color-secondary, 5%);
+		background-color: $fr-color-secondary-darker;
 		cursor: pointer;
 
 		&:not(:first-child) {
@@ -260,30 +308,33 @@
 	}
 
 	.side-menu__font-switch {
-		display: none;
+		opacity: 0;
 		position: absolute;
-		left: 50%;
-		margin-left: -15px;
-		margin-top: -15px;
-		width: 30px;
+		right: 15px;
+		margin-top: -19px;
+		width: 38px;
+		height: 38px;
 		font-size: 14px;
-		height: 30px;
 		text-align: center;
 		line-height: 30px;
 		background-color: #FFF;
 		border-radius: 50px;
 		color: $fr-color-secondary;
 		cursor: pointer;
+		border: 4px solid $fr-color-secondary;
+		transition: opacity 0.5s ease;
 	}
 
 	footer {
 		position: absolute;
 		bottom: 0;
-		left: 20px;
-		right: 20px;
+		left: 0;
+		right: 0;
+		padding: 0 20px;
 		line-height: 30px;
 		text-align: center;
 		border-top: 1px solid #FFF;
+		background-color: $fr-color-secondary;
 	}
 }
 
@@ -356,7 +407,7 @@
 			text-transform: capitalize;
 
 			&:hover {
-				background-color: darken($fr-color-secondary, 10%);
+				background-color: $fr-color-secondary-darker;
 			}
 		}
 	}
