--- a/app/styles/themes/theme-agnostic.scss
+++ b/app/styles/themes/theme-agnostic.scss
@@ -198,6 +198,7 @@ body {
 		padding-top: 20px;
 		background-color: $lightGray;
 	}
+
 	p {
 		padding: 15px;
 	}
@@ -376,7 +377,8 @@ body {
 		color: $darkGray;
 	}
 
-	input, textarea {
+	input,
+	textarea {
 		padding: 12px;
 		font-size: 16px;
 		font-weight: 700;
